// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OtherLoanAmountField /> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE JvWob"
    id="testForm"
  >
    <div
      class="sc-kEqYlL dXeAFH"
    >
      <div
        class="sc-lmgQde krpvJC"
      >
        <input
          class="sc-hBMVcZ gLDbdG"
          id="otherLoanAmountField"
          name="name"
          placeholder="Kwota obecnych zobowiązań finansowych"
          type="text"
          value="test"
        />
        <span
          class="sc-kfYqjs jzRxwY"
        >
          PLN
        </span>
      </div>
      <span
        class="sc-ksluoS cNvzFC"
      >
        Podany kwota jest nieprawidłowa
      </span>
    </div>
  </form>
</div>
`;

exports[`<OtherLoanAmountField /> matches snapshot 1`] = `
<input
  class="sc-hBMVcZ jwTqYL"
  id="otherLoanAmountField"
  name="name"
  placeholder="Kwota obecnych zobowiązań finansowych"
  type="text"
  value=""
/>
`;

exports[`<OtherLoanAmountField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE JvWob"
    id="testForm"
  >
    <div
      class="sc-kEqYlL dXeAFH"
    >
      <label
        for="name"
      >
        Test*
      </label>
      <div
        class="sc-lmgQde krpvJC"
      >
        <input
          class="sc-hBMVcZ gLDbdG"
          id="otherLoanAmountField"
          label="Test"
          name="name"
          placeholder="Kwota obecnych zobowiązań finansowych*"
          required=""
          type="text"
          value=""
        />
        <span
          class="sc-kfYqjs jzRxwY"
        >
          PLN
        </span>
      </div>
      <span
        class="sc-ksluoS cNvzFC"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<OtherLoanAmountField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE JvWob"
    id="testForm"
  >
    <div
      class="sc-kEqYlL dXeAFH"
    >
      <label
        for="name"
      >
        Test
      </label>
      <div
        class="sc-lmgQde krpvJC"
      >
        <input
          class="sc-hBMVcZ jwTqYL"
          id="otherLoanAmountField"
          label="Test"
          name="name"
          placeholder="Kwota obecnych zobowiązań finansowych"
          type="text"
          value=""
        />
        <span
          class="sc-kfYqjs jzRxwY"
        >
          PLN
        </span>
      </div>
    </div>
  </form>
</div>
`;
